--- a/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -2,7 +2,7 @@ version: 2
 
 sources:
   - name: jaffle_shop
-    database: dbt-tutorial
+    database: brett-demo-project
     schema: jaffle_shop
     tables:
       - name: customers
