--- a/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -17,8 +17,14 @@ models:
       - name: status
         tests:
           - accepted_values:
-            - completed
-            - shipped
-            - returned
-            - return_pending
-            - placed
+              values:
+                - completed
+                - shipped
+                - returned
+                - return_pending
+                - placed
+      - name: customer_id
+        tests:
+          - relationships:
+            to: ref('stg_customers')
+            field: customer_id
