--- a/models/staging/stripe/src_stripe.yml
+++ b/models/staging/stripe/src_stripe.yml
@@ -6,6 +6,7 @@ sources:
     schema: stripe
     tables:
       - name: payment
+        description: Payments made via stripe
         loaded_at_field: _etl_loaded_at
         freshness:
           warn_after: {count: 12, period: hour}
