--- a/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -5,8 +5,35 @@ sources:
     database: brett-demo-project
     schema: jaffle_shop
     tables:
-      - name: customers
-      - name: orders
+      - name: stg_customers
+        columns:
+          - name: customer_id
+            tests:
+            - unique
+            - not_null
+
+      - name: stg_orders
+        columns:
+          - name: order_id
+            tests:
+              - unique
+              - not_null
+          - name: status
+            tests:
+              - name: status
+            tests:
+              - accepted_values:
+                  values:
+                    - completed
+                    - shipped
+                    - returned
+                    - return_pending
+                    - placed
+          - name: customer_id
+            tests:
+              - relationships:
+                  to: ref('stg_customers')
+                  field: customer_id
         loaded_at_field: _etl_loaded_at
         freshness:
           warn_after: {count: 12, period: hour}
